force-app/main/default/objects/Pesquisa_Formulario_Cliente__c/Pesquisa_Formulario_Cliente__c.object-meta.xml
<CustomObject>
    <label>Pesquisa de satisfação</label>
    <nameField>
        <label>Nome de Pesquisa Formulário Cliente</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pesquisas de satisfação</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>