force-app/main/default/objects/Pesquisa_Formulario_Cliente__c/fields/Descri_o_do_formul_rio__c.field-meta.xml
<CustomField>
    <fullName>Descri_o_do_formul_rio__c</fullName>
    <formula>Pesquisa_Formulario__r.Descricao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descrição do formulário</label>
    <type>Text</type>
</CustomField>