force-app/main/default/objects/Pesquisa_Formulario_Cliente__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <length>20</length>
    <type>Text</type>
</CustomField>