force-app/main/default/objects/Pesquisa_Formulario_Cliente__c/fields/Nome_do_cliente__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_cliente__c</fullName>
    <formula>Pedido__r.Nome_da_conta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do cliente</label>
    <type>Text</type>
</CustomField>