force-app/main/default/objects/Pesquisa_Formulario_Cliente__c/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipName>Pesquisa_Formul_rios_Clientes</relationshipName>
    <type>Lookup</type>
</CustomField>