force-app/main/default/objects/Pesquisa_Formulario_Cliente__c/fields/Pesquisa_Formulario__c.field-meta.xml
<CustomField>
    <fullName>Pesquisa_Formulario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pesquisa Formulário</label>
    <referenceTo>Pesquisa_Formulario__c</referenceTo>
    <relationshipName>Pesquisa_Formul_rios_Clientes</relationshipName>
    <type>Lookup</type>
</CustomField>