force-app/main/default/objects/Pesquisa_Formulario_Cliente__c/listViews/C_pia_de_Todas.listView-meta.xml
<ListView>
    <fullName>C_pia_de_Todas</fullName>
    <columns>NAME</columns>
    <columns>Descri_o_do_formul_rio__c</columns>
    <columns>Nome_do_cliente__c</columns>
    <columns>Estado__c</columns>
    <columns>Departamento__c</columns>
    <columns>Pedido__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Departamento__c</field>
        <operation>equals</operation>
        <value>Serviço</value>
    </filters>
    <label>Todas serviço</label>
</ListView>