force-app/main/default/objects/Pesquisa_Formulario_Cliente__c/listViews/Todas.listView-meta.xml
<ListView>
    <fullName>Todas</fullName>
    <columns>NAME</columns>
    <columns>Descri_o_do_formul_rio__c</columns>
    <columns>Nome_do_cliente__c</columns>
    <columns>Estado__c</columns>
    <columns>Departamento__c</columns>
    <columns>Pedido__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todas</label>
</ListView>